# MoneyTokenize-FastAPI

./: .env.dist  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py
app/api/endpoints/: __init__.py
app/api/endpoints/money_tokenize/: __init__.py  money_tokenize.py
app/core/: settings.py
app/core/tokenize_processing/: tokenize_processing.py
